# anomaly-watcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: __main__.py
core/anomaly_detection/: __init__.py  __main__.py  anomaly_service.py  cli.py  detector.py  models.py  monitor.py  persistence.py  trainer.py  utils.py
core/anomaly_detection/detectors/: isolation_forest.py  statistical.py
database/: __init__.py  cli.py  db.py
database/models/: __init__.py  anomaly.py  base.py  sensor_data.py
generator/: cli.py
generator/sensors/: __init__.py  anomaly_injector.py  base.py  fan.py  heater.py  lamp.py  oven.py  pm.py
generator/utils/: __init__.py  data_generator.py  reader.py
models/anomaly_detection/: fan_model.pkl  heater_model.pkl  lamp_model.pkl  models_metadata.json  oven_model.pkl  pm_model.pkl
scripts/: run_with_monitoring.py
tests/: test_generator.py
visualization/: __init__.py  app.py
visualization/routes/: __init__.py  anomalies.py  dashboard.py
visualization/static/css/: style.css
visualization/static/js/: charts.js
visualization/templates/: base.html  dashboard.html
visualization/utils/: __init__.py  chart_helpers.py
